added file upload

--- a/config/properties.ini
+++ b/config/properties.ini
@@ -1,4 +1,4 @@
 [symfony]
   name=Watcher
-  author=Your name here
+  author=Esteban Alarcón Ceballos, Enrique Arango Lyons, Daniel Múnera Sánchez
   orm=Doctrine
