--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -14,7 +14,7 @@ default:
 
   stylesheets:    [main.css]
 
-  javascripts:    []
+  javascripts:    [jquery-1.5.2.min.js, jquery-ui-1.8.12.custom.min.js, jquery.ui.stars.min.js, application.js]
 
   has_layout:     true
   layout:         layout
